# meshtastic-serial-udp

./: .gitignore  .gitmodules  Cargo.toml  Cross.toml  Dockerfile.mips-softfloat  README.md  build-mips-musl-soft.sh  build.rs  build.sh  mips-unknown-linux-musl-soft.json  test.sh
.cargo/: config.toml
.github/: renovate.json
.github/workflows/: ci.yaml
hack/: Dockerfile.cross  arch-config.sh
mips-openwrt/: build-mips-musl-soft.sh  meshtastic-serial-udp.init  postinstall  postupgrade  prerm
openwrt/: Dockerfile.cross  build.sh  meshtastic-serial-udp.conf  meshtastic-serial-udp.init  mipsel-unknown-linux-musl-soft.json
src/: bridge.rs  crypto.rs  main.rs  raven.rs  serial.rs  serial_framing.rs  test_util.rs  udp.rs
