[package]
name = "meshtastic-serial-udp"
version = "0.1.0"
edition = "2024"

[dependencies]
aes = "=0.8.4"
base64 = "=0.22.1"
clap = { version = "=4.6.1", features = ["derive"] }
env_logger = "=0.11.10"
log = "=0.4.29"
prost = "=0.14.3"
rand = "=0.10.1"
serde = { version = "=1.0.228", features = ["derive"] }
serde_json = "=1.0.149"
serialport = "=4.9.0"
socket2 = { version = "=0.6.3", features = ["all"] }

[build-dependencies]
prost-build = "=0.14.3"

[dev-dependencies]
tempfile = "=3.27.0"

[profile.release]
strip = true
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
